--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Signup</title>
+    <title>Login</title>
     <link rel="stylesheet" href="style.css" />
 
 
